with practice part

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
             </div>
         </section>
     </main>
+    
 
     <!--  js link -->
-    <script src="js/login.js"></script>
+    <!-- <script src="js/login.js"></script> -->
+    <script src="js/practice-banking.js"></script>
+    <script src="js/banking-site.js"></script>
 </body>
 </html>
