--- a/practice-banking.html
+++ b/practice-banking.html
@@ -4,60 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banking Homeage</title>
+    <title>Shamim Bank Of Bangladesh</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <header>
-        <h1 class ="text-5xl text-center mt-16"> Let's get some <span class="font-semibold text-purple-600">Mooooooouney</span>!!!</h1>
+        <h1 class="text-6xl text-center mt-8">Hello <span class="font-smibold text-green-600">Bangladesh Bank</span>!!!</h1>
     </header>
-    <main class="w-3/4 mx-auto">
-
-        <!-- Balance and tractions -->
-
+    <main class=" w-3/4 mx-auto">
         <section class="mt-8">
             <div class="grid grid-cols-3 gap-4 text-white">
-                <div class="bg-blue-300 p-8 rounded">
+                <div class="bg-blue-400 p-8 rounded">
                     <h3 class="text-2xl">Deposit</h3>
-                    <h4 class="text-4xl">$<span  id="deposit-total">00</span></h4>
+                    <h4  class="text-4xl">$<span id="deposit-total">00</span></h4>
                 </div>
-                <div class="bg-green-300 p-8 rounded">
+                <div class="bg-green-400 p-8 rounded">
                     <h3 class="text-2xl">Withdraw</h3>
                     <h4 class="text-4xl">$<span id="withdraw-total">00</span></h4>
                 </div>
-                <div class="bg-yellow-300 p-8 rounded">
+                <div class="bg-yellow-400 p-8 rounded">
                     <h3 class="text-2xl">Balance</h3>
-                    <h4 class="text-4xl">$<span id="balance-total">2471</span> </h4>
+                    <h4  class="text-4xl">$<span id="balance-total">1100</span></h4>
                 </div>
-                
-            </div>
+            </div> 
         </section>
 
-        <!-- diposit and withdraw  -->
-        
+        <!-- deposit and withdraw section -->
+
         <section class="mt-8">
             <div class="grid grid-cols-2 gap-4">
                 <div class="bg-red-100 p-8 rounded">
-                    <h3 class="text-3xl my-2">Please Deposit</h3>
+                    <h3 class="text-2xl">Please Deposit</h3>
+                <div>
                     <div>
-                        <input id="deposit-input" class="border block rounded border-gray-400 w-3/4 mb-4 px-3" type="text" name="" id="" placeholder="$ amount you want to deposit">
+                        <input id="deposit-input" class="border block rounded border-gray-400 w-3/4 mb-4 px-2" type="text" name="" id="" placeholder="$ amount you want to deposit">
 
                         <button id="deposit-button" type="submit" class=" bg-yellow-600 px-4 rounded py-2 text-white font-medium">Deposit</button>
                     </div>
                 </div>
+                </div>
+
+
+                <!-- withdraw -->
+
                 <div class="bg-purple-100 p-8 rounded">
-                    <h3 class="text-3xl my-2">Please Withdraw</h3>
+                    <h3 class="text-2xl">Withdraw</h3>
+                <div>
                     <div>
-                        <input id="withdraw-input" class="border block rounded border-gray-400 w-3/4 mb-4 px-3" type="text" name="" id="" placeholder="$ amount you want to Withdraw">
+                        <input id="withdraw-input" class="border block rounded border-gray-400 w-3/4 mb-4 px-2" type="text" name="" id="" placeholder="$ amount you want to Withdraw">
 
                         <button id="withdraw-button" type="submit" class=" bg-yellow-600 px-4 rounded py-2 text-white font-medium">Withdraw</button>
                     </div>
                 </div>
+                </div>
             </div>
         </section>
     </main>
-    <!-- script link  -->
-    <!-- <script src="js/banking.js"></script> -->
-    <script src="js/practice-banking.js"></script>
+    <script src="js/banking-site.js"></script>
 </body>
 </html>
